WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305328
Fix Site Isolation compatibility with Enhanced Security
https://bugs.webkit.org/show_bug.cgi?id=305328
Summary
Fix Site Isolation compatibility with Enhanced Security
ronan_turner
Reported
2026-01-12 06:28:50 PST
rdar://164474301
Attachments
Add attachment
proposed patch, testcase, etc.
ronan_turner
Comment 1
2026-01-19 07:46:50 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56834
EWS
Comment 2
2026-02-03 09:16:44 PST
Committed
306717@main
(4895f35302d0): <
https://commits.webkit.org/306717@main
> Reviewed commits have been landed. Closing PR #56834 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug